--- a/styles/style.css
+++ b/styles/style.css
@@ -411,43 +411,84 @@ main section.call_to_action .cta_footer .btn_cta_footer a svg {
 main section.call_to_action .cta_footer .btn_cta_footer a svg path {
   fill: #FCFFFF;
 }
+main section.glimpse_of_work {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 main section.glimpse_of_work h1.glimpse_title {
   font-size: 2.8rem;
   margin-bottom: 2rem;
   text-align: center;
 }
-main section.glimpse_of_work .works_image_area {
+main section.glimpse_of_work .wrapper {
+  width: 100%;
+}
+main section.glimpse_of_work .wrapper .carousel {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 400px;
+  grid-auto-flow: column;
+  grid-auto-columns: calc(33.3333333333% - 12px);
   gap: 1rem;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
 }
-main section.glimpse_of_work .works_image_area .glimpse_img {
-  width: 100%;
-  height: 100%;
+main section.glimpse_of_work .wrapper .carousel::-webkit-scrollbar {
+  display: none;
+}
+main section.glimpse_of_work .wrapper .carousel.dragging {
+  scroll-behavior: auto;
+  scroll-snap-type: none;
+}
+main section.glimpse_of_work .wrapper .carousel.dragging .img_container {
+  cursor: grab;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+main section.glimpse_of_work .wrapper .carousel.no_transition {
+  scroll-behavior: auto;
+}
+main section.glimpse_of_work .wrapper .carousel .img_container {
+  height: 400px;
   overflow: hidden;
+  border-radius: 0.2rem;
+  scroll-snap-align: start;
 }
-main section.glimpse_of_work .works_image_area .glimpse_img img {
-  height: 100%;
-  width: 100%;
+main section.glimpse_of_work .wrapper .carousel .img_container img {
+  height: 400px;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: 50% 50%;
-     object-position: 50% 50%;
+  -o-object-fit: 50% 0;
+     object-fit: 50% 0;
 }
-main section.glimpse_of_work .glimpse_arrows {
+main section.glimpse_of_work .wrapper .control_button {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 4rem;
+  gap: 8rem;
   margin-top: 2rem;
 }
-main section.glimpse_of_work .glimpse_arrows .arrow a svg {
-  height: 2rem;
-  width: 2rem;
+main section.glimpse_of_work .wrapper .control_button .control {
+  background: rgba(12, 23, 28, 0.75);
+  padding: 0.5rem 1rem;
+  border-radius: 0.2rem;
+  cursor: pointer;
 }
-main section.glimpse_of_work .glimpse_arrows .arrow a svg path {
-  fill: #0c171c;
+main section.glimpse_of_work .wrapper .control_button .control:hover {
+  background: #0c171c;
+}
+main section.glimpse_of_work .wrapper .control_button .control svg {
+  height: 1.5rem;
+  width: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main section.glimpse_of_work .wrapper .control_button .control svg path {
+  fill: #FCFFFF;
 }
 main section.instagram_work_area h3 {
   font-size: 2.8rem;
@@ -549,8 +590,101 @@ main section.contact_us .contact_us_area a.btn:hover svg {
 }
 
 @media screen and (max-width: 800px) {
+  header .hero_text_container h1 {
+    font-size: 4.2rem;
+  }
+  header .hero_text_container h3 {
+    font-size: 2.1rem;
+  }
+  header .hero_text_container p.description {
+    font-size: 0.7rem;
+  }
+  section.section {
+    margin: 4rem 4rem 0 !important;
+  }
+  section.section:last-child {
+    margin-bottom: 4rem !important;
+  }
   section.service_showcase_area .service_container {
     grid-template-columns: repeat(1, 1fr) !important;
     grid-template-areas: "service_image" "service_info" !important;
+    gap: 2rem !important;
+  }
+  section.service_showcase_area .service_container .service_info h3.service_title {
+    font-size: 2.1rem;
+  }
+  section.service_showcase_area .service_container .service_info p.service_desc {
+    font-size: 0.7rem;
+  }
+  section.service_showcase_area .service_container .service_info a {
+    margin-top: 2rem;
+  }
+  section.service_showcase_area .service_container .service_info a p.view_more_btn {
+    font-size: 0.7rem;
+  }
+  section.call_to_action .cta_imge_area .call_to_action_textarea .cta_title {
+    font-size: 2.1rem !important;
+  }
+  section.call_to_action .cta_imge_area .call_to_action_textarea .cta_desc p {
+    font-size: 0.7rem !important;
+  }
+  section.call_to_action .cta_footer {
+    flex-direction: column !important;
+    gap: 1rem;
+    align-items: flex-start !important;
+    padding: 1rem 4rem !important;
+  }
+  section.call_to_action .cta_footer .cta_footer_textarea h1.cta_footer_title {
+    font-size: 1rem !important;
+  }
+  section.call_to_action .cta_footer .cta_footer_textarea p.cta_footer_desc {
+    font-size: 0.7rem;
+  }
+  section.call_to_action .cta_footer .btn_cta_footer a {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1rem;
+    padding: 1rem 2rem;
+    border-radius: 0.2rem;
+    background-color: #0c171c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem 1rem !important;
+  }
+  section.call_to_action .cta_footer .btn_cta_footer a p {
+    color: #FCFFFF;
+  }
+  section.call_to_action .cta_footer .btn_cta_footer a p {
+    font-size: 0.7rem;
+  }
+  section.call_to_action .cta_footer .btn_cta_footer a:hover svg {
+    transform: translate(4px);
+  }
+  section.call_to_action .cta_footer .btn_cta_footer a svg {
+    transition: all 0.3s ease-in-out;
+  }
+  section.call_to_action .cta_footer .btn_cta_footer a svg path {
+    fill: #FCFFFF;
+  }
+  section.glimpse_of_work .wrapper .carousel {
+    grid-auto-columns: calc(50% - 12px) !important;
+  }
+}
+@media screen and (max-width: 450px) {
+  header .hero_text_container h1 {
+    font-size: 2.8rem;
+  }
+  header .hero_text_container h3 {
+    font-size: 1.4rem;
+  }
+  header .hero_text_container p.description {
+    font-size: 0.7rem;
+  }
+  section.section {
+    margin: 2rem 2rem 0 !important;
+  }
+  section.glimpse_of_work .wrapper .carousel {
+    grid-auto-columns: 100% !important;
   }
 }/*# sourceMappingURL=style.css.map */
