--- a/styles/style.scss
+++ b/styles/style.scss
@@ -164,49 +164,95 @@ main {
     }
 
     section.glimpse_of_work {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
         h1.glimpse_title {
             font-size: $heading_3;
             margin-bottom: 2rem;
             text-align: center;
         }
 
-        .works_image_area {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: 400px;
-            gap: 1rem;
+        .wrapper {
+            // max-width: 1100px;
+            width: 100%;
 
-            .glimpse_img {
-                width: 100%;
-                height: 100%;
-                overflow: hidden;
+            .carousel {
+                display: grid;
+                grid-auto-flow: column;
+                grid-auto-columns: calc((100% / 3) - 12px);
+                gap: 1rem;
+                overflow-x: auto;
+                scroll-snap-type: x mandatory;
+                scroll-behavior: smooth;
+                scrollbar-width: none;
 
-                img {
-                    height: 100%;
-                    width: 100%;
-                    object-fit: cover;
-                    object-position: 50% 50%;
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+
+                &.dragging {
+                    scroll-behavior: auto;
+                    scroll-snap-type: none;
+
+                    .img_container {
+                        cursor: grab;
+                        user-select: none;
+                    }
+                }
+
+                &.no_transition {
+                    scroll-behavior: auto;
+                }
+
+                .img_container {
+                    height: 400px;
+                    overflow: hidden;
+                    border-radius: $border_radius;
+                    scroll-snap-align: start;
+
+                    img {
+                        height: 400px;
+                        object-fit: cover;
+                        object-fit: 50% 0;
+                    }
+                }
+            }
+
+            .control_button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 8rem;
+                margin-top: 2rem;
+
+                .control {
+                    background: $dark75;
+                    padding: .5rem 1rem;
+                    border-radius: $border_radius;
+                    cursor: pointer;
+
+                    &:hover {
+                        background: $dark100;
+                    }
+
+                    svg {
+                        height: 1.5rem;
+                        width: 1.5rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        path {
+                            fill: $color_white;
+                        }
+                    }
                 }
             }
         }
 
-        .glimpse_arrows {
-            // background: lawngreen;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 4rem;
-            margin-top: 2rem;
-
-            .arrow a svg {
-                height: 2rem;
-                width: 2rem;
-
-                path {
-                    fill: $dark100
-                }
-            }
-        }
     }
 
     section.instagram_work_area {
@@ -257,10 +303,141 @@ main {
 //?? RESPONSIVE DESIGN
 
 @include tablet {
+    header .hero_text_container {
+        h1 {
+            font-size: $heading_1_t;
+        }
+
+        h3 {
+            font-size: $heading_3_t
+        }
+
+        p.description {
+            font-size: $paragraph_t;
+        }
+    }
+
+    section.section {
+        margin: 4rem 4rem 0 !important; // top | left and right | bottom
+
+        &:last-child {
+            margin-bottom: 4rem !important;
+        }
+    }
+
     section.service_showcase_area {
         .service_container {
             grid-template-columns: repeat(1, 1fr) !important;
             grid-template-areas: 'service_image' 'service_info' !important;
+            gap: 2rem !important;
+
+            .service_info {
+                h3.service_title {
+                    font-size: $heading_3_t
+                }
+
+                p.service_desc {
+                    font-size: $paragraph_t;
+                }
+
+                a {
+                    margin-top: 2rem;
+
+                    p.view_more_btn {
+                        font-size: $paragraph_t;
+                    }
+                }
+            }
+        }
+    }
+
+    section.call_to_action {
+        .cta_imge_area {
+            .call_to_action_textarea {
+                .cta_title {
+                    font-size: $heading_3_t !important;
+                }
+
+                .cta_desc p {
+                    font-size: $paragraph_t !important;
+                }
+            }
+        }
+
+        .cta_footer {
+            flex-direction: column !important;
+            gap: 1rem;
+            align-items: flex-start !important;
+            padding: 1rem 4rem !important; //top and bottom | left and right
+
+            .cta_footer_textarea {
+                h1.cta_footer_title {
+                    font-size: $paragraph !important;
+                }
+
+                p.cta_footer_desc {
+                    font-size: $paragraph_t
+                }
+            }
+
+            .btn_cta_footer {
+                a {
+                    @include make_button($color_white, $dark100);
+                    gap: .5rem;
+                    padding: .5rem 1rem !important;
+
+                    p {
+                        font-size: $paragraph_t;
+                    }
+
+                    &:hover svg {
+                        transform: translate(4px);
+                    }
+
+                    svg {
+                        transition: all .3s ease-in-out;
+
+                        path {
+                            fill: $color_white;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    section.glimpse_of_work {
+        .wrapper {
+            .carousel {
+                grid-auto-columns: calc((100% / 2) - 12px) !important;
+            }
+        }
+    }
+}
+
+@include mobile {
+    header .hero_text_container {
+        h1 {
+            font-size: $heading_3;
+        }
+
+        h3 {
+            font-size: $heading_5
+        }
+
+        p.description {
+            font-size: $paragraph_t;
+        }
+    }
+
+    section.section {
+        margin: 2rem 2rem 0 !important;
+    }
+
+
+    section.glimpse_of_work {
+        .wrapper .carousel {
+            grid-auto-columns: 100% !important;
         }
     }
 }
