--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -8,7 +8,7 @@
 
 // ------------------------- VARIABLES -------------------------------
 //? COLORS
-$color_primary : #00BD9D;
+$color_primary : #00b496;
 $color_white : #FCFFFF;
 $color_error : #FA402F;
 $dark100 : #0c171c;
