--- a/styles/error.css
+++ b/styles/error.css
@@ -97,16 +97,15 @@ nav.nav_container .hamberger:has(input:checked)::after {
   translate: 0 0.075rem;
   transition: all 200ms ease-in-out;
 }
-nav.nav_container .logo_container img {
-  height: 2.5rem;
+nav.nav_container .logo_container .logo {
+  height: 35px;
 }
 nav.nav_container .social_container .social_icon svg {
   margin: 0 0.7rem;
-  transition: all 0.3s ease-in-out !important;
   color: #0c171c;
 }
 nav.nav_container .social_container .social_icon svg:hover {
-  color: #00b496;
+  color: #ad50d2;
 }
 
 .nav_link_container {
@@ -141,7 +140,7 @@ nav.nav_container .social_container .social_icon svg:hover {
   transition: all 0.2s ease-in-out;
 }
 .nav_link_container ul.nav_links .links a:hover {
-  color: #00b496;
+  color: #ad50d2;
 }
 .nav_link_container ul.nav_links #social_container_2 {
   margin-top: 1rem;
@@ -155,7 +154,7 @@ nav.nav_container .social_container .social_icon svg:hover {
   margin: 0 1rem;
 }
 .nav_link_container ul.nav_links #social_container_2 .social_icon svg:hover {
-  color: #00b496;
+  color: #ad50d2;
 }
 .nav_link_container ul.show {
   width: 50%;
@@ -274,57 +273,34 @@ footer.footer_area .social_container .social_icon svg:hover {
   }
 }
 header .error_text_container {
-  position: absolute;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  padding: 1rem;
 }
-header .error_text_container .text_area {
-  margin-bottom: 4rem;
-}
-header .error_text_container h1 {
-  margin-bottom: 4rem;
+header .error_text_container .text_area h1 {
   font-size: 5.653rem;
   color: #FA402F;
 }
-header .error_text_container h2 {
+header .error_text_container .text_area h2 {
   font-size: 4rem;
 }
-header .error_text_container p {
-  color: rgba(12, 23, 28, 0.75);
-  font-size: 1rem;
+header .error_text_container .text_area p {
+  margin-bottom: 3rem;
 }
-header .error_text_container .btn {
-  outline: none;
-  transition: 0.3s ease-in-out;
+header .error_text_container .text_area .btn {
+  background: #0c171c;
   padding: 1rem 2rem;
-  background-color: #0c171c;
   font-family: "Open Sans", sans-serif;
+  color: white;
   border-radius: 0.2rem;
-  color: #FCFFFF;
 }
-header .error_text_container .btn:hover {
-  background: #00b496;
+header .error_text_container .text_area .btn:hover {
+  background-color: #ad50d2;
 }
 
-@media screen and (max-width: 450px) {
-  header .error_text_container h1 {
-    font-size: 4.946rem;
-  }
-  header .error_text_container h2 {
-    font-size: 3.5rem;
-  }
-  header .error_text_container p {
-    font-size: 0.875rem;
-  }
-  header .error_text_container .btn {
-    font-size: 0.875rem;
-  }
-}
 @media screen and (max-width: 320px) {
   header .error_text_container h2 {
-    font-size: 2.5rem;
+    font-size: 3.5rem !important;
   }
 }/*# sourceMappingURL=error.css.map */
